[project]
name = "mda5013-assessment-2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "ipykernel>=7.2.0",
    "kaggle>=2.2.0",
    "keras>=3.14.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]
